<resources>
    <string name="app_name">AtmoDrive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Looking for a \nride? Try \n<font color='#00A6A6'>AtmoDrive</font> and \nBook now!</string>
    <string name="get_started">Get Started</string>
    <string name="powered_by_atmosphere">Powered by Atmosphere ©</string>
    <string name="logo">logo</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_mobile_number_to_find_your_account_or_ncreate_a_new_one">Enter mobile number to find your account or create a new one.</string>
    <string name="phone_hint">1234567890</string>
    <string name="continue_">Continue</string>
    <string name="by_continue_you_agree_to_atmodrive_s">By continue you agree to AtmoDrive\'s</string>
    <string name="terms_and_conditions"><b><u><font color='#00A6A6'>Terms &amp; Conditions </font></u></b></string>
    <string name="do_not_receive_a_code">Don’t receive a code? </string>
    <string name="resend"> Resend</string>
    <string name="counter"> ( %1s:%2s s)</string>
    <string name="privacy_policy">and <b><u><font color='#00A6A6'> Privacy Policy </font></u></b></string>
    <string name="verify">Verify</string>
    <string name="full_name">Full name</string>
    <string name="submit">Submit</string>
    <string name="enter_your_information_below_to_create_your_naccount">Enter your information below to create your account.</string>
    <string name="create_account">Create account</string>
    <string name="email_address_optional">Email address (optional)</string>
    <string name="login">Login</string>
    <string name="otp_code">OTP code</string>
    <string name="send_code">Send code</string>
    <string name="enter_mobile_number_and_password_to_continue">Enter mobile number and password to\n continue.</string>
    <string name="forget_password"><u>forget password?</u></string>
    <string name="welcome_back">Welcome back,</string>
    <string name="next">Next</string>
    <string name="my_trips">My trips</string>
    <string name="account_information_coming_soon">Account Information (Coming soon)</string>
    <string name="settings">Settings</string>
    <string name="get_help">Get help</string>
    <string name="scan_to_login_with_web">Scan to login with web</string>
    <string name="have_problem">Have problem?</string>
    <string name="update_information">Update information</string>
    <string name="default_trip">Default trip</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="new_user_message">Enter the OTP code sent to you at mobile number +2%s to verify its you.</string>
    <string name="user_message">Hello %1s . Enter the OTP code sent to you at mobile number +2%2s</string>
    <string name="required">required</string>
    <string name="to_verify_its_you">  to verify its you</string>
    <string name="logout">Logout</string>
    <string name="powered_by_atmosphere_captain_app_android_v1_0_0_1">Powered by Atmosphere © \nCaptain App - Android\n v1.0.0(1)</string>
    <string name="skip_and_go">Skip,and go</string>
    <string name="eg_country_code">+2</string>
    <string name="cash">Cash</string>
    <string name="now">Now</string>
    <string name="atmodrive">AtmoDrive</string>
    <string name="request_trip">Request trip</string>
    <string name="choose_from_map">Choose from map</string>
    <string name="where_to_go">Where to go?</string>
    <string name="loading">Loading...</string>
    <string name="cancel">Cancel</string>
    <string name="minutes_way_from_you">  minutes way from you</string>
    <string name="egp">  EGP</string>
    <string name="done">Done</string>
    <string name="trip_running">Trip Running</string>
    <string name="captain_is_on_the_way_to_you">Captain is on the way to you.</string>
    <string name="captain_is_arrived_to_pickup">Captain is arrived to pickup</string>
    <string name="you_are_arrived_to_drop_off">You are arrived to drop off! 🎉🎉</string>
    <string name="captain_accept_yor_trip">Captain accepted yor trip</string>
    <string name="confirm">Confirm</string>
</resources>