<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".passenger.auth.CreateAccountFragment">



    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/baseline_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/enter_your_information_below_to_create_your_naccount"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        android:layout_marginHorizontal="@dimen/_10sdp"
        />


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/hint_color"
        android:hint="@string/full_name"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="13dp" />

    <EditText
        android:id="@id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/hint_color"
        android:hint="@string/email_address_optional"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintTop_toBottomOf="@+id/editText_name"
        tools:layout_editor_absoluteX="13dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="@dimen/_15ssp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email"
        android:layout_margin="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>