<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".passenger.auth.EnterMobilePassengerFragment">


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/enter_mobile_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/baseline_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/enter_mobile_number_to_find_your_account_or_ncreate_a_new_one"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"
        android:layout_marginHorizontal="@dimen/_10sdp"
        />

    <com.hbb20.CountryCodePicker
        android:id="@+id/countryCodeHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:ccp_showNameCode="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:ccp_autoDetectCountry="true"
        android:layout_marginStart="@dimen/_10sdp"
        />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:backgroundTint="@color/hint_color"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/countryCodeHolder"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textSize="@dimen/_15ssp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_phone"
        android:layout_marginTop="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/txt_terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/by_continue_you_agree_to_atmodrive_s"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue"
        android:layout_marginHorizontal="@dimen/_10sdp"
        />


    <TextView
        android:id="@+id/txt_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_terms_and_conditions"
        android:layout_marginStart="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>