<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="@dimen/_10sdp"
    tools:context=".auth.presentation.fragments.VerifyFragment">


    <TextView
        android:id="@+id/tilte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/enter_the_otp_code_sent_to_you_at_mobile_number"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilte">

        <TextView
            android:id="@+id/txt_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_color"
            android:text="@string/eg_country_code"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_verify_its_you"
            android:textColor="@color/textColor"
            android:layout_marginStart="@dimen/_2sdp"
            android:textSize="@dimen/_15sdp" />


    </LinearLayout>

    <com.chaos.view.PinView
        android:id="@+id/pinview"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:gravity="center"
        android:inputType="number"
        android:textSize="@dimen/_15sdp"
        android:itemBackground="@color/backgroundColor"
        app:cursorColor="@color/main_color"
        app:hideLineWhenFilled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        android:textColor="@color/textColor"
        app:lineColor="@color/hint_color"
        android:layout_marginVertical="@dimen/_20sdp"
        app:viewType="line" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/main_color"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinview" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/do_not_receive_a_code"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/txt_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/resend"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/txt_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/counter"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txt_resend"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>