<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map_view"
    tools:context=".splash.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/child"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/dm_sans"
            android:text="@string/welcome_message"
            android:textColor="@color/white"
            android:textSize="@dimen/_28sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/baseline_arrow_circle_right"
            android:drawablePadding="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            android:fontFamily="@font/dm_sans"
            android:padding="@dimen/_10sdp"
            android:text="@string/get_started"
            android:textAllCaps="false"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_10sdp"
            app:iconPadding="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/textView"

            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/powered_by_atmosphere"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>